--- a/index.html
+++ b/index.html
@@ -8,15 +8,186 @@
 	<title>Hongbi's Portfolio</title>
 	<meta name="description" content="Portfolio for HongbiKo">
 	<meta name="author" content="hongbiKo">
-	<!-- 나만의 favicon 만들어서 추가할것 -->
-	<!-- <link rel="shortcut icon" href="imgs/favicon.ico"> -->
+	<link rel="shortcut icon" href="imgs/hongbicon.ico">
 	<script src="https://kit.fontawesome.com/44e76333c8.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="index.js" defer></script>
 </head>
 
 <body>
+	<!-- Navbar -->
+	<nav id="navbar">
+		<div class="navbar_logo">
+			<img src="">
+			<a href="#">Hongbi</a>
+		</div>
+		<ul class="navbar__menu">
+			<li class="navbar__menu__item">Home</li>
+			<li class="navbar__menu__item">About</li>
+			<li class="navbar__menu__item">Skills</li>
+			<li class="navbar__menu__item">Work</li>
+			<li class="navbar__menu__item">Contact</li>
+		</ul>
+	</nav>
+	<!-- Home -->
+	<section id="home">
+		<img src="" alt="Hongbi's profile photo" class="home__avatar">
+		<h1 class="home__title">Hello, I'm Hongbi.</h1>
+		<h2 class="home__description">Front-end Engineer</h2>
+		<button class="home__contact">Contact me</button>
+	</section>
+	<!-- About -->
+	<section id="about">
+		<h1>About me</h1>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae harum animi, eveniet nemo explicabo deleniti ipsa maxime enim illum ab sunt tempore dolorum minima consequatur error, ipsam nesciunt reiciendis suscipit?</p>
+		<div class="about__majors">
+			<div class="major">
+				<div class="major__icon"></div>
+				<div class="major__title">html</div>
+				<div class="major__description"></div>
+			</div>
+			<div class="major">
+				<div class="major__icon"></div>
+				<div class="major__title">css</div>
+				<div class="major__description"></div>
+			</div>
+			<div class="major">
+				<div class="major__icon"></div>
+				<div class="major__title">javascript</div>
+				<div class="major__description"></div>
+			</div>
+		</div>
+		<div class="about__schools">
+			<div class="school">
+				<img src="" alt="" class="school__logo">
+				<div class="school__description">
+					<p class="school__name">방송통신대학교 컴퓨터과학과</p>
+					<p class="school__period">2022. 03. 01 ~ 재학중</p>
+				</div>
+			</div>
+			<div class="school">
+				<img src="" alt="" class="school__logo">
+				<div class="school__description">
+					<p class="school__name">반응형웹디자인코스</p>
+					<p class="school__period"></p>
+				</div>
+			</div>
+			<div class="school">
+				<img src="" alt="" class="school__logo">
+				<div class="school__description">
+					<p class="school__name">Amsterdam Economics and Business Foundation</p>
+					<p class="school__period"></p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Skills -->
+	<section id="skills">
+		<h1>Skills</h1>
+		<h2>Skills & Attributes</h2>
+		<p>어떤식으로 일을 진행하는지</p>
+		<div class="skillset">
+			<div class="skillset__left">
+				<h3 class="skillset__title">Skills</h3>
+				<div class="skill">
+					<div class="skill__description">
+						<span>html</span>
+						<span>95%</span>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+				</div>
+				<div class="skill">
+					<div class="skill__description">
+						<span>css</span>
+						<span>93%</span>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+				</div>
+				<div class="skill">
+					<div class="skill__description">
+						<span>javascript</span>
+						<span>70%</span>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="skillset__right">
+				<div class="tools">
+					<h3 class="tools__title">Tools</h3>
+					<ul class="tools__list">
+						<li><span>Photoshop</span></li>
+						<li><span>Figma</span></li>
+					</ul>
+				</div>
+				<div class="etc">
+					<h3 class="tools__etc">ETC</h3>
+					<ul class="etc__list">
+						<li><span>Git</span></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Work -->
+	<section id="work">
+		<h1>My work</h1>
+		<h3>Projects</h3>
+		<div class="work__categories">
+			<button class="category__btn">
+				Webpage
+				<span class="category__count">2</span>
+			</button>
+			<button class="category__btn">
+				Game
+				<span class="category__count">1</span>
+			</button>
+			<button class="category__btn">
+				React
+				<span class="category__count">1</span>
+			</button>
+			<button class="category__btn">
+				..
+				<span class="category__count">1</span>
+			</button>
+		</div>
+		<div class="work__projects">
+			<a href="" class="project" target="blank">
+				<img src="" alt="webpage1" class="project__img">
+				<div class="project__description">
+					<h3>Webpage</h3>
+					<span>Clone coding with html and css...</span>
+				</div>
+			</a>
+			<a href="" class="project" target="blank">
+				<img src="" alt="webpage1" class="project__img">
+				<div class="project__description">
+					<h3>Webpage</h3>
+					<span>Clone coding with html and css...</span>
+				</div>
+			</a>
+		</div>
+	</section>
+	<!-- Contact -->
+	<section id="contact">
+		<h1 class="contact__title">Contact me</h1>
+		<h2 class="contatct__email">rhghdql666@gmail.com</h2>
+		<div class="contact__links">
+			<a href="" target="_blank">
+				<i class=""></i>
+			</a>
+			<a href="" target="_blank">
+				<i class=""></i>
+			</a>
+		</div>
+		<p class="contact__right">2022 Honbi's Portfolio - All rights reserved</p>
+	</section>
 
 </body>
 
-</html> 
+</html>
