--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 		<h2 class="contatct__email">rhghdql666@gmail.com</h2>
 		<div class="contact__links">
 			<a href="" target="_blank">
-				<i class=""></i>
+				<i class="fa-brands fa-github"></i>
 			</a>
 			<a href="" target="_blank">
-				<i class=""></i>
+				<i class="fa-brands fa-linkedin"></i>
 			</a>
 		</div>
 		<p class="contact__right">2022 Honbi's Portfolio - All rights reserved</p>
