--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 	<!-- Navbar -->
 	<nav id="navbar">
-		<div class="navbar_logo">
+		<div class="navbar__logo">
 			<img src="">
-			<a href="#">Hongbi</a>
+			<a href="#">Portfolio</a>
 		</div>
 		<ul class="navbar__menu">
-			<li class="navbar__menu__item">Home</li>
+			<li class="navbar__menu__item active">Home</li>
 			<li class="navbar__menu__item">About</li>
 			<li class="navbar__menu__item">Skills</li>
 			<li class="navbar__menu__item">Work</li>
