--- a/index.html
+++ b/index.html
@@ -31,111 +31,135 @@
 	</nav>
 	<!-- Home -->
 	<section id="home">
-		<img src="" alt="Hongbi's profile photo" class="home__avatar">
+		<img src="imgs/profilepic.jpg" alt="Hongbi's profile photo" class="home__avatar">
 		<h1 class="home__title">Hello, I'm Hongbi.</h1>
 		<h2 class="home__description">Front-end Engineer</h2>
 		<button class="home__contact">Contact me</button>
 	</section>
 	<!-- About -->
-	<section id="about">
-		<h1>About me</h1>
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae harum animi, eveniet nemo explicabo deleniti ipsa maxime enim illum ab sunt tempore dolorum minima consequatur error, ipsam nesciunt reiciendis suscipit?</p>
-		<div class="about__majors">
-			<div class="major">
-				<div class="major__icon"></div>
-				<div class="major__title">html</div>
-				<div class="major__description"></div>
+	<section id="about" class="section">
+		<h1>Me?</h1>
+		<p>개발의 ㄱ도 모르는 방랑자가 우연히 개발의 세계에 발을 들여놓으면서, 지금은 이 일을 좋아하고 열심히 공부하려고 노력합니다. 현재는 프론트엔드개발자가 되기 위해 열심히 공부 중입니다. </p>
+		<p>I've never known about the programming and coding before. But after I got a good chance to know this world, Now, I love and try to study hard. I'm learning about Front-end developing skills and Computer Science.</p>
+		<div class="about__schools">
+			<h3>Education</h3>
+			<div class="school">
+				<img src="imgs/seedling.svg" alt="" class="about__logo">
+				<div class="school__description">
+					<p class="school__name">한국방송통신대학교 컴퓨터과학과 __ Bachelor of Computer Science Korea National Open University</p>
+					<p class="about__period">03.2022 ~ 재학중(in the course)</p>
+				</div>
 			</div>
-			<div class="major">
-				<div class="major__icon"></div>
-				<div class="major__title">css</div>
-				<div class="major__description"></div>
+			<div class="school">
+				<img src="imgs/seedling.svg" alt="" class="about__logo">
+				<div class="school__description">
+					<p class="school__name">반응형 웹디자인 및 웹퍼블리셔 취업과정[스마트혼합] 국비지원과정 __ Responsive web design and web publisher learning course in computer academy</p>
+					<p class="about__period">02.2021 ~ 06.2021</p>
+				</div>
 			</div>
-			<div class="major">
-				<div class="major__icon"></div>
-				<div class="major__title">javascript</div>
-				<div class="major__description"></div>
+			<div class="school">
+				<img src="imgs/seedling.svg" alt="" class="about__logo">
+				<div class="school__description">
+					<p class="school__name">암스테르담 경제경영 파운데이션 __ Amsterdam Economics and Business Foundation</p>
+					<p class="about__period">09.2016 ~ 06.2017</p>
+				</div>
 			</div>
 		</div>
-		<div class="about__schools">
-			<div class="school">
-				<img src="" alt="" class="school__logo">
-				<div class="school__description">
-					<p class="school__name">방송통신대학교 컴퓨터과학과</p>
-					<p class="school__period">2022. 03. 01 ~ 재학중</p>
+		<div class="about__experiences">
+			<h3>Experience</h3>
+			<div class="experience">
+				<img src="imgs/cactus.svg" alt="" class="about__logo">
+				<div class="experience__description">
+					<p class="experience__name">뉴질랜드 워킹홀리데이 __ NewZealands Working Holiday</p>
+					<p class="about__period">09.2019 ~ 04.2020</p>
 				</div>
 			</div>
-			<div class="school">
-				<img src="" alt="" class="school__logo">
-				<div class="school__description">
-					<p class="school__name">반응형웹디자인코스</p>
-					<p class="school__period"></p>
-				</div>
-			</div>
-			<div class="school">
-				<img src="" alt="" class="school__logo">
-				<div class="school__description">
-					<p class="school__name">Amsterdam Economics and Business Foundation</p>
-					<p class="school__period"></p>
+			<div class="experience">
+				<img src="imgs/cactus.svg" alt="" class="about__logo">
+				<div class="experience__description">
+					<p class="experience__name">호주 워킹홀리데이 __ Australia Working Holiday</p>
+					<p class="about__period">03.2018 ~ 12.2018</p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- Skills -->
-	<section id="skills">
-		<h1>Skills</h1>
-		<h2>Skills & Attributes</h2>
-		<p>어떤식으로 일을 진행하는지</p>
-		<div class="skillset">
-			<div class="skillset__left">
-				<h3 class="skillset__title">Skills</h3>
-				<div class="skill">
-					<div class="skill__description">
-						<span>html</span>
-						<span>95%</span>
+	<section id="skills" class="section">
+		<div class="section__container">
+			<h1>Skills</h1>
+			<h2>Skills & Attributes</h2>
+			<p>현재 웹프론트엔드개발 공부를 하고 있습니다:)</p>
+			<p>I focus to study about Web Front-end developing and my skills are like under description.</p>
+			<div class="skillset">
+				<div class="skillset__left">
+					<h4 class="skillset__title">Skills</h4>
+					<div class="skill">
+						<div class="skill__description">
+							<i class="fa-brands fa-html5"></i>
+							<span>HTML</span>
+						</div>
 						<div class="skill__bar">
-							<div class="skill__value"></div>
+							<div class="skill__value" style="width: 95%;"></div>
 						</div>
 					</div>
-				</div>
-				<div class="skill">
-					<div class="skill__description">
-						<span>css</span>
-						<span>93%</span>
+					<div class="skill">
+						<div class="skill__description">
+							<i class="fa-brands fa-css3-alt"></i>
+							<span>CSS</span>
+						</div>
 						<div class="skill__bar">
-							<div class="skill__value"></div>
+							<div class="skill__value" style="width: 92%""></div>
 						</div>
 					</div>
-				</div>
-				<div class="skill">
-					<div class="skill__description">
-						<span>javascript</span>
-						<span>70%</span>
+					<div class="skill">
+						<div class="skill__description">
+							<i class="fa-brands fa-js"></i>
+							<span>JavaScript</span>
+						</div>
 						<div class="skill__bar">
-							<div class="skill__value"></div>
+							<div class="skill__value" style="width: 75%""></div>
 						</div>
 					</div>
+					<!-- <div class="skill">
+						<div class="skill__description">
+							<i class="fa-brands fa-react"></i>
+							<span>React</span>
+							<span>10%</span>
+							<div class="skill__bar">
+								<div class="skill__value"></div>
+							</div>
+						</div>
+					</div> -->
 				</div>
-			</div>
-			<div class="skillset__right">
-				<div class="tools">
-					<h3 class="tools__title">Tools</h3>
-					<ul class="tools__list">
-						<li><span>Photoshop</span></li>
-						<li><span>Figma</span></li>
-					</ul>
-				</div>
-				<div class="etc">
-					<h3 class="tools__etc">ETC</h3>
-					<ul class="etc__list">
-						<li><span>Git</span></li>
-					</ul>
+				<div class="skillset__right">
+					<div class="tools">
+						<h4 class="tools__title">Tools</h4>
+						<ul class="tools__list">
+							<li>
+								<i class="fa-solid fa-paintbrush"></i>
+								<span>Photoshop</span>
+							</li>
+							<li>
+								<i class="fa-brands fa-figma"></i>
+								<span>Figma</span>
+							</li>
+						</ul>
+					</div>
+					<div class="etc">
+						<h4 class="tools__etc">ETC</h4>
+						<ul class="etc__list">
+							<li>
+								<i class="fa-brands fa-square-github"></i>
+								<span>Git</span>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- Work -->
-	<section id="work">
+	<section id="work" class="section">
 		<h1>My work</h1>
 		<h3>Projects</h3>
 		<div class="work__categories">
@@ -174,7 +198,7 @@
 		</div>
 	</section>
 	<!-- Contact -->
-	<section id="contact">
+	<section id="contact" class="section">
 		<h1 class="contact__title">Contact me</h1>
 		<h2 class="contatct__email">rhghdql666@gmail.com</h2>
 		<div class="contact__links">
