css fix until skills

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Navbar -->
 	<nav id="navbar">
 		<div class="navbar__logo">
-			<img src="">
+			<img src="imgs/logo.svg" alt="logo">
 			<a href="#">Portfolio</a>
 		</div>
 		<ul class="navbar__menu">
@@ -70,7 +70,7 @@
 			<div class="experience">
 				<img src="imgs/cactus.svg" alt="" class="about__logo">
 				<div class="experience__description">
-					<p class="experience__name">뉴질랜드 워킹홀리데이 __ NewZealands Working Holiday</p>
+					<p class="experience__name">뉴질랜드 워킹홀리데이 __ New Zealand Working Holiday</p>
 					<p class="about__period">09.2019 ~ 04.2020</p>
 				</div>
 			</div>
@@ -89,7 +89,7 @@
 			<h1>Skills</h1>
 			<h2>Skills & Attributes</h2>
 			<p>현재 웹프론트엔드개발 공부를 하고 있습니다:)</p>
-			<p>I focus to study about Web Front-end developing and my skills are like under description.</p>
+			<p>I focus to study about Web Front-end developing and my skills are like under the description.</p>
 			<div class="skillset">
 				<div class="skillset__left">
 					<h4 class="skillset__title">Skills</h4>
@@ -108,7 +108,7 @@
 							<span>CSS</span>
 						</div>
 						<div class="skill__bar">
-							<div class="skill__value" style="width: 92%""></div>
+							<div class="skill__value" style="width: 92%"></div>
 						</div>
 					</div>
 					<div class="skill">
@@ -117,7 +117,7 @@
 							<span>JavaScript</span>
 						</div>
 						<div class="skill__bar">
-							<div class="skill__value" style="width: 75%""></div>
+							<div class="skill__value" style="width: 75%"></div>
 						</div>
 					</div>
 					<!-- <div class="skill">
@@ -130,6 +130,9 @@
 							</div>
 						</div>
 					</div> -->
+					<div class="skill">
+						<span class="skill__certificate">* 웹디자인기능사 (07.09.2021) __ Craftsman Web Design</span>
+					</div>
 				</div>
 				<div class="skillset__right">
 					<div class="tools">
@@ -163,7 +166,7 @@
 		<h1>My work</h1>
 		<h3>Projects</h3>
 		<div class="work__categories">
-			<button class="category__btn">
+			<button class="category__btn active">
 				Webpage
 				<span class="category__count">2</span>
 			</button>
