--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 			<li class="navbar__menu__item">Work</li>
 			<li class="navbar__menu__item">Contact</li>
 		</ul>
+
+		<!-- Toggle button -->
+		<button class="navbar__toggle-btn">
+			<i class="fa-solid fa-bars"></i>
+		</button>
 	</nav>
 	<!-- Home -->
 	<section id="home">
@@ -85,78 +90,76 @@
 	</section>
 	<!-- Skills -->
 	<section id="skills" class="section">
-		<div class="section__container">
-			<h1>Skills</h1>
-			<h2>Skills & Attributes</h2>
-			<p>현재 웹프론트엔드개발 공부를 하고 있습니다:)</p>
-			<p>I focus to study about Web Front-end developing and my skills are like under the description.</p>
-			<div class="skillset">
-				<div class="skillset__left">
-					<h4 class="skillset__title">Skills</h4>
-					<div class="skill">
-						<div class="skill__description">
-							<i class="fa-brands fa-html5"></i>
-							<span>HTML</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value" style="width: 95%;"></div>
-						</div>
+		<h1>Skills</h1>
+		<h2>Skills & Attributes</h2>
+		<p>현재 웹프론트엔드개발 공부를 하고 있습니다:)</p>
+		<p>I focus to study about Web Front-end developing and my skills are like under the description.</p>
+		<div class="skillset">
+			<div class="skillset__left">
+				<h4 class="skillset__title">Skills</h4>
+				<div class="skill">
+					<div class="skill__description">
+						<i class="fa-brands fa-html5"></i>
+						<span>HTML</span>
 					</div>
-					<div class="skill">
-						<div class="skill__description">
-							<i class="fa-brands fa-css3-alt"></i>
-							<span>CSS</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value" style="width: 92%"></div>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill__description">
-							<i class="fa-brands fa-js"></i>
-							<span>JavaScript</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value" style="width: 75%"></div>
-						</div>
-					</div>
-					<!-- <div class="skill">
-						<div class="skill__description">
-							<i class="fa-brands fa-react"></i>
-							<span>React</span>
-							<span>10%</span>
-							<div class="skill__bar">
-								<div class="skill__value"></div>
-							</div>
-						</div>
-					</div> -->
-					<div class="skill">
-						<span class="skill__certificate">* 웹디자인기능사 (07.09.2021) __ Craftsman Web Design</span>
+					<div class="skill__bar">
+						<div class="skill__value" style="width: 95%;"></div>
 					</div>
 				</div>
-				<div class="skillset__right">
-					<div class="tools">
-						<h4 class="tools__title">Tools</h4>
-						<ul class="tools__list">
-							<li>
-								<i class="fa-solid fa-paintbrush"></i>
-								<span>Photoshop</span>
-							</li>
-							<li>
-								<i class="fa-brands fa-figma"></i>
-								<span>Figma</span>
-							</li>
-						</ul>
+				<div class="skill">
+					<div class="skill__description">
+						<i class="fa-brands fa-css3-alt"></i>
+						<span>CSS</span>
 					</div>
-					<div class="etc">
-						<h4 class="tools__etc">ETC</h4>
-						<ul class="etc__list">
-							<li>
-								<i class="fa-brands fa-square-github"></i>
-								<span>Git</span>
-							</li>
-						</ul>
+					<div class="skill__bar">
+						<div class="skill__value" style="width: 92%"></div>
 					</div>
+				</div>
+				<div class="skill">
+					<div class="skill__description">
+						<i class="fa-brands fa-js"></i>
+						<span>JavaScript</span>
+					</div>
+					<div class="skill__bar">
+						<div class="skill__value" style="width: 75%"></div>
+					</div>
+				</div>
+				<!-- <div class="skill">
+					<div class="skill__description">
+						<i class="fa-brands fa-react"></i>
+						<span>React</span>
+						<span>10%</span>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+				</div> -->
+				<div class="skill">
+					<span class="skill__certificate">*웹디자인기능사 Craftsman Web Design (07.09.2021)</span>
+				</div>
+			</div>
+			<div class="skillset__right">
+				<div class="tools">
+					<h4 class="tools__title">Tools</h4>
+					<ul class="tools__list">
+						<li>
+							<i class="fa-solid fa-paintbrush"></i>
+							<span>Photoshop</span>
+						</li>
+						<li>
+							<i class="fa-brands fa-figma"></i>
+							<span>Figma</span>
+						</li>
+					</ul>
+				</div>
+				<div class="etc">
+					<h4 class="tools__etc">ETC</h4>
+					<ul class="etc__list">
+						<li>
+							<i class="fa-brands fa-square-github"></i>
+							<span>Git</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -202,17 +205,19 @@
 	</section>
 	<!-- Contact -->
 	<section id="contact" class="section">
-		<h1 class="contact__title">Contact me</h1>
-		<h2 class="contatct__email">rhghdql666@gmail.com</h2>
-		<div class="contact__links">
-			<a href="" target="_blank">
-				<i class="fa-brands fa-github"></i>
-			</a>
-			<a href="" target="_blank">
-				<i class="fa-brands fa-linkedin"></i>
-			</a>
+		<div class="contact__container">
+			<h1 class="contact__title">Contact me</h1>
+			<h2 class="contact__email">rhghdql666@gmail.com</h2>
+			<div class="contact__links">
+				<a href="" target="_blank">
+					<i class="fa-brands fa-github"></i>
+				</a>
+				<a href="" target="_blank">
+					<i class="fa-brands fa-linkedin"></i>
+				</a>
+			</div>
+			<p class="contact__right">2022 Honbi's Portfolio - All rights reserved</p>
 		</div>
-		<p class="contact__right">2022 Honbi's Portfolio - All rights reserved</p>
 	</section>
 
 </body>
