css responsive final

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					</div>
 				</div> -->
 				<div class="skill">
-					<span class="skill__certificate">*웹디자인기능사 Craftsman Web Design (07.09.2021)</span>
+					<span class="skill__certificate">* 웹디자인기능사 Craftsman Web Design<br>(07.09.2021)</span>
 				</div>
 			</div>
 			<div class="skillset__right">
