--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			<h1 class="contact__title">Contact me</h1>
 			<h2 class="contact__email">rhghdql666@gmail.com</h2>
 			<div class="contact__links">
-				<a href="" target="_blank">
+				<a href="https://github.com/HongbiKo" target="_blank">
 					<i class="fa-brands fa-github"></i>
 				</a>
 				<a href="" target="_blank">
