--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<img src="imgs/profilepic.jpg" alt="Hongbi's profile photo" class="home__avatar">
 		<h1 class="home__title">Hello, I'm Hongbi.</h1>
 		<h2 class="home__description">Front-end Engineer</h2>
-		<button class="home__contact">Contact me</button>
+		<button class="home__contact" data-link="#contact">Contact me</button>
 	</section>
 	<!-- About -->
 	<section id="about" class="section">
