--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
 			<p class="contact__right">2022 Honbi's Portfolio - All rights reserved</p>
 		</div>
 	</section>
+	<!-- Arrow up -->
+	<button class="arrow-up">
+		<i class="fa-solid fa-arrow-up"></i>
+	</button>
 
 </body>
 
