js project filtering

--- a/index.html
+++ b/index.html
@@ -175,43 +175,50 @@
 			</button>
 			<button class="category__btn" data-filter="webpage">
 				Webpage
-				<span class="category__count">2</span>
+				<span class="category__count">1</span>
 			</button>
 			<button class="category__btn" data-filter="game">
 				Game
 				<span class="category__count">1</span>
 			</button>
-			<button class="category__btn" data-filter="react">
-				React
-				<span class="category__count">1</span>
+			<button class="category__btn" data-filter="cloning">
+				Cloning
+				<span class="category__count">2</span>
 			</button>
 		</div>
 		<div class="work__projects">
-			<a href="" class="project" target="blank" data-type="webpage">
+			<a href="" class="project" target="_blank" data-type="webpage">
+				<div class="project__img webpage"></div>
+				<div class="project__description">
+					<h3>Webpage</h3>
+					<span>Responsive web page</span>
+				</div>
+			</a>
+			<!-- <a href="" class="project" target="blank" data-type="webpage">
 				<img src="" alt="webpage1" class="project__img">
 				<div class="project__description">
 					<h3>Webpage</h3>
 					<span>Clone coding with html and css...</span>
 				</div>
-			</a>
-			<a href="" class="project" target="blank" data-type="webpage">
-				<img src="" alt="webpage1" class="project__img">
-				<div class="project__description">
-					<h3>Webpage</h3>
-					<span>Clone coding with html and css...</span>
-				</div>
-			</a>
-			<a href="" class="project" target="blank" data-type="game">
-				<img src="" alt="game" class="project__img">
+			</a> -->
+			<a href="https://hongbiko.github.io/jjangGame/" class="project" target="blank" data-type="game">
+				<div class="project__img jjangGame"></div>
 				<div class="project__description">
 					<h3>Game</h3>
+					<span>Catch puppies!</span>
+				</div>
+			</a>
+			<a href="https://hongbiko.github.io/momentum/" class="project" target="blank" data-type="cloning">
+				<div class="project__img todoList"></div>
+				<div class="project__description">
+					<h3>To do list</h3>
 					<span>Clone coding</span>
 				</div>
 			</a>
-			<a href="" class="project" target="blank" data-type="react">
-				<img src="" alt="react" class="project__img">
+			<a href="https://hongbiko.github.io/shoppingList/" class="project" target="blank" data-type="cloning">
+				<div class="project__img shoppingList"></div>
 				<div class="project__description">
-					<h3>React project</h3>
+					<h3>Shopping List</h3>
 					<span>Clone coding</span>
 				</div>
 			</a>
