acive navbar when click each section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- About -->
 	<section id="about" class="section">
 		<h1>Me?</h1>
-		<p>개발의 ㄱ도 모르는 방랑자가 우연히 개발의 세계에 발을 들여놓으면서, 지금은 이 일을 좋아하고 열심히 공부하려고 노력합니다. 현재는 프론트엔드개발자가 되기 위해 열심히 공부 중입니다. </p>
+		<p>개발의 ㄱ자도 모르고 여행만을 쫓던 방랑자가 우연히 개발의 세계에 발을 들여놓으면서, 지금은 이 일을 좋아하고 열심히 공부하려 노력합니다. 현재는 프론트엔드개발자가 되기 위해 열심히 공부 중입니다. </p>
 		<p>I've never known about the programming and coding before. But after I got a good chance to know this world, Now, I love and try to study hard. I'm learning about Front-end developing skills and Computer Science.</p>
 		<div class="about__schools">
 			<h3>Education</h3>
@@ -121,19 +121,18 @@
 						<span>JavaScript</span>
 					</div>
 					<div class="skill__bar">
-						<div class="skill__value" style="width: 75%"></div>
+						<div class="skill__value" style="width: 85%"></div>
 					</div>
 				</div>
-				<!-- <div class="skill">
+				<div class="skill">
 					<div class="skill__description">
 						<i class="fa-brands fa-react"></i>
-						<span>React</span>
-						<span>10%</span>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
+						<span>React - Start NOW.</span>
 					</div>
-				</div> -->
+					<div class="skill__bar">
+						<div class="skill__value" style="width: 10%"></div>
+					</div>
+				</div>
 				<div class="skill">
 					<span class="skill__certificate">* 웹디자인기능사 Craftsman Web Design<br>(07.09.2021)</span>
 				</div>
@@ -228,13 +227,13 @@
 	<section id="contact" class="section">
 		<div class="contact__container">
 			<h1 class="contact__title">Contact me</h1>
-			<h2 class="contact__email">rhghdql666@gmail.com</h2>
+			<h2 class="contact__email"><a href="mailto:rhghdql666@gmail.com">rhghdql666@gmail.com</a></h2>
 			<div class="contact__links">
 				<a href="https://github.com/HongbiKo" target="_blank">
 					<i class="fa-brands fa-github"></i>
 				</a>
-				<a href="" target="_blank">
-					<i class="fa-brands fa-linkedin"></i>
+				<a href="https://velog.io/@dhrhghdql" target="_blank">
+					<i class="fa-solid fa-book"></i>
 				</a>
 			</div>
 			<p class="contact__right">2022 Honbi's Portfolio - All rights reserved</p>
