responsive webpage upload

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			<a href="https://hongbiko.github.io/dancingfestival_web/" class="project" target="_blank" data-type="webpage">
 				<div class="project__img webpage"></div>
 				<div class="project__description">
-					<h3>Webpage<br>working now<br>(작업중)</h3>
+					<h3>Webpage</h3>
 					<span>Responsive web page</span>
 				</div>
 			</a>
