--- a/index.html
+++ b/index.html
@@ -187,10 +187,17 @@
 		</div>
 		<div class="work__projects">
 			<a href="https://hongbiko.github.io/dancingfestival_web/" class="project" target="_blank" data-type="webpage">
-				<div class="project__img webpage"></div>
+				<div class="project__img webpage-busan"></div>
 				<div class="project__description">
 					<h3>Webpage</h3>
 					<span>Responsive web page</span>
+				</div>
+			</a>
+			<a href="https://hongbiko.github.io/hiltonHotel/" class="project" target="_blank" data-type="webpage">
+				<div class="project__img webpage-hilton"></div>
+				<div class="project__description">
+					<h3>Webpage</h3>
+					<span>Responsive web page<br>(반응형 작업중)-기능거의완료</span>
 				</div>
 			</a>
 			<!-- <a href="" class="project" target="blank" data-type="webpage">
