hilton hotel comeplete -> message eddting

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 				<div class="project__img webpage-hilton"></div>
 				<div class="project__description">
 					<h3>Webpage</h3>
-					<span>Responsive web page<br>(반응형 작업중)-기능거의완료</span>
+					<span>Responsive web page</span>
 				</div>
 			</a>
 			<!-- <a href="" class="project" target="blank" data-type="webpage">
