adding react project, notion skills, etc...

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 				<div class="skill">
 					<div class="skill__description">
 						<i class="fa-brands fa-react"></i>
-						<span>React - Start NOW.</span>
+						<span>React</span>
 					</div>
 					<div class="skill__bar">
-						<div class="skill__value" style="width: 10%"></div>
+						<div class="skill__value" style="width: 70%"></div>
 					</div>
 				</div>
 				<div class="skill">
@@ -158,6 +158,10 @@
 							<i class="fa-brands fa-square-github"></i>
 							<span>Git</span>
 						</li>
+						<li>
+							<i class="fa-solid fa-n"></i>
+							<span>Notion</span>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -170,7 +174,7 @@
 		<div class="work__categories">
 			<button class="category__btn selected" data-filter="*">
 				All
-				<span class="category__count">5</span>
+				<span class="category__count">6</span>
 			</button>
 			<button class="category__btn" data-filter="webpage">
 				Webpage
@@ -182,19 +186,19 @@
 			</button>
 			<button class="category__btn" data-filter="cloning">
 				Cloning
-				<span class="category__count">2</span>
+				<span class="category__count">3</span>
 			</button>
 		</div>
 		<div class="work__projects">
-			<a href="https://hongbiko.github.io/dancingfestival_web/" class="project" target="_blank" data-type="webpage">
-				<div class="project__img webpage-busan"></div>
+			<a href="https://hongbiko.github.io/hiltonHotel/" class="project" target="_blank" data-type="webpage">
+				<div class="project__img webpage-hilton"></div>
 				<div class="project__description">
 					<h3>Webpage</h3>
 					<span>Responsive web page</span>
 				</div>
 			</a>
-			<a href="https://hongbiko.github.io/hiltonHotel/" class="project" target="_blank" data-type="webpage">
-				<div class="project__img webpage-hilton"></div>
+			<a href="https://hongbiko.github.io/dancingfestival_web/" class="project" target="_blank" data-type="webpage">
+				<div class="project__img webpage-busan"></div>
 				<div class="project__description">
 					<h3>Webpage</h3>
 					<span>Responsive web page</span>
@@ -226,6 +230,13 @@
 				<div class="project__description">
 					<h3>Shopping List</h3>
 					<span>Clone coding</span>
+				</div>
+			</a>
+			<a href="https://youtube-hongbi-react.netlify.app/" class="project" target="_blank" data-type="cloning">
+				<div class="project__img youtube"></div>
+				<div class="project__description">
+					<h3>Youtube</h3>
+					<span>Clone coding(React)</span>
 				</div>
 			</a>
 		</div>
