add item of school

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
           <img src="imgs/seedling.svg" alt="" class="about__logo" />
           <div class="school__description">
             <p class="school__name">
+              프로그래머스 웹 풀스택 과정 __ BootCamp for Web Full-stack
+              developer (Programmers)
+            </p>
+            <p class="about__period">08.2024 ~ 03.2025</p>
+          </div>
+        </div>
+        <div class="school">
+          <img src="imgs/seedling.svg" alt="" class="about__logo" />
+          <div class="school__description">
+            <p class="school__name">
               한국방송통신대학교 컴퓨터과학과 __ Bachelor of Computer Science
               Korea National Open University
             </p>
